--- a/server-purchase-popup.html
+++ b/server-purchase-popup.html
@@ -10,6 +10,8 @@
 			position:absolute;
 			display:inline-block;	
 			text-align:center;
+			top:0%;
+			left:100%;
 		}
 		#modal-dialog2 > * {
 		    margin: 11px 0;
