--- a/automationwidget.html
+++ b/automationwidget.html
@@ -237,6 +237,13 @@
             </div>
             <button id="declineButton" class="button">Start Declining Inbound Trades</button>
             <hr>
+
+            <div id="declineallinboundtrades">
+                <h3 class="">All Inbound Declining</h3>
+            </div>
+            <button id="declineAllButton" class="button">Start Declining All Inbound Trades</button>
+            <hr>
+
             <div id="removefollowers">
                 <h3 class="">Remove Following</h3>
                 <div class="row">
