--- a/automationwidget.html
+++ b/automationwidget.html
@@ -227,6 +227,11 @@
                     <label class="switch"><input class="checkbox value" type="checkbox"><span class="slider round"></span></label>
                 </div>
                 <div class="row">
+                    <span class="text">Don't Decline Rares</span>
+                    <label class="switch"><input class="checkbox value" type="checkbox"><span class="slider round"></span></label>
+                </div>
+                
+                <div class="row">
                     <span class="text">Max Decline Amount</span>
                     <input class="input block value" type="number" step=1 value=0 min=0>
                 </div>
