--- a/options.html
+++ b/options.html
@@ -300,14 +300,13 @@
                 <div style="grid-column-start: 1;grid-column-end: 4;display:flex;justify-content: space-between;padding:10px;font-size:15px;margin-top:25px;">
                     <img class="icons_ITV" src="https://t2.rbxcdn.com/ffc3cf81492f26555592d46357f0658e" style="width:50px;height:50px;margin-top:-15px;">
                     |
-                    <a href="discord://discordapp.com/users/580875147624579083" target="_blank"><span>See Shawn#2000</span></a>
+                    <a href="https://github.com/KDJDEV/ITV-Privacy-Policy/blob/main/In-Tab-Values%20Privacy%20Policy.md" target="_blank"><span>Privacy Policy</span></a>
                     |
-                    <a href="https://discord.gg/UUzFdZfZB3" target="_blank"><span>Fates Admin Winning!</span></a>
+                    <a href="https://discord.gg/AhFPsHJmym" target="_blank"><span>Help</span></a>
                 </div>
-                <div style="text-align:center;font-size:13px;margin-bottom:15px;">
+                <div style="text-align:center;font-size:13px;margin-bottom:10px;">
                     In-Tab Values is not affiliated with roblox.com, rolimons.com or rblx.trade.
-                    Developed by KDJ. Contact me: kdjstuffs@gmail.com.
-                    Cracked by Shawn#2000
+                    Developed by KDJ, Cracked by Shawn#2000
                 </div>
             </footer>
         </div>
